UI fixes
Fixed overlapping feedback footer, moved to top. Disabled horizontal
scrollbar caused by bootstrap grid system.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,4 +24,13 @@ footer {
     position: fixed;
     text-align: center;
 }
+#feedback{
+    color:white;
+}
+
+.row {
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
 
